<resources>
    <!-- LOGIN -->
    <string name="app_name">Calculadora de Finanzas</string>
    <string name="txt_login_string">Login</string>
    <string name="txt_numero_string">Número</string>
    <string name="txt_contraseña_string">Contraseña</string>
    <string name="btn_iniciar_sesion_string">Iniciar Sesión</string>
    <string name="btn_registrate_string">Regístrate</string>
    <string name="txt_sin_cuenta_string">Sin Cuenta</string>
    <string name="eti_registro_string">Registro</string>
    <!--REGISTRO -->
    <string name="btn_registrarse_string">Crear cuenta</string>
    <string name="eti_nombre_string">Nombre</string>
    <string name="eti_saldo_string">Saldo</string>
    <string name="eti_correo_string">Correo</string>
    <string name="eti_confirma_contra_string">Confirma Contraseña</string>
    <!-- INGRESO -->
    <string name="eti_gastos_string">Gastos</string>
    <string name="eti_rubro_string">Rubro</string>
    <string name="eti_costo_string">Costo</string>
    <string name="eti_fecha_string">Fecha (01/12/25)</string>
    <string name="eti_categoria_string">Categoría</string>
    <string name="btn_guardar_string">Guardar</string>
    <string name="btn_borrar_mes_string">Borrar Mes</string>
    <string name="btn_restaurar_string">Restaurar</string>
    <string name="btn_volver_string">Volver</string>
    <string name="btn_nuevo_gasto_string">Nuevo Gasto</string>
    <!-- VISTA PRINCIPAL -->
    <string name="txt_config_string">Configuración</string>
    <string name="btn_modificar_string">Actualizar</string>
    <string name="btn_borrar_cuenta_string">Eliminar Cuenta</string>
    <string name="txt_gastos_mes_string">Gastos Mes</string>
    <string name="btn_consul_gast_string">Consultar Gasto</string>
    <string name="btn_cuenta_string">Cuenta</string>
    <string name="btn_configuracion_string">Configuración</string>
    <string name="btn_salir_string">Salir</string>
    <string name="txt_bienvenido_string">Bienvenido</string>
    <string name="txt_saldo_actual_string">Saldo Actual</string>
    <string name="txt_ingreso_even_string">Ingreso Eventual</string>
    <string name="txt_ingreso_period_string">Ingreso Periódico</string>
    <string name="txt_sumar_string">Sumar</string>

    <string name="alert_saldoRebasado_string">¡Saldo Rebasado!</string>
    <string name="alert_pocoSaldo_string">¡Se termina tu saldo!</string>
    <!-- CONSULTA -->
    <string name="eti_consulta_string">Consulta</string>
    <string name="btn_todo_string">Todo</string>
    <string name="btn_mes_string">Mes</string>
    <string name="btn_fecha_string">Fecha</string>
    <string name="btn_rubro_string">Rubro</string>
    <string name="txt_cuenta_string">Cuenta</string>
    <string name="txt_allEntries_string">Todas las Entradas</string>
    <string name="txt_month_string">Mes</string>
</resources>