<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondon"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/eti_Registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="@android:color/background_light"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/eti_gastos_string" />

    <EditText
        android:id="@+id/editCompra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:hint="@string/eti_rubro_string"
        android:inputType="textCapWords"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eti_Registro" />

    <EditText
        android:id="@+id/editCosto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/eti_costo_string"
        android:inputType="numberDecimal"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCompra" />

    <EditText
        android:id="@+id/editFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/eti_fecha_string"
        android:inputType="date"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/background_light"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCosto" />

    <HorizontalScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="58dp"
        android:layout_marginTop="68dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editFecha">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_Guardar"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:onClick="alta"
                android:text="@string/btn_guardar_string"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_BorrarMes"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:onClick="bajaMes"
                android:text="@string/btn_borrar_mes_string"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_BorrarTodo"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:onClick="bajaTodo"
                android:text="@string/btn_restaurar_string"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_Volver"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:onClick="volver"
                android:text="@string/btn_volver_string"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

        </LinearLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>