<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondop"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/eti_Configuracion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:text="@string/txt_config_string"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eti_Configuracion">

        <TextView
            android:id="@+id/label_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_numero_string"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_Numero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/label_nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eti_nombre_string"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_Nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/label_saldo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eti_saldo_string"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_Saldo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/label_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eti_correo_string"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_Correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/label_contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_contraseña_string"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_Contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textVisiblePassword"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_modificar"
        android:layout_width="wrap_content"
        android:layout_height="35sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape"
        android:onClick="modificacion"
        android:text="@string/btn_modificar_string"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_eliminar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_regresar"
        android:layout_width="wrap_content"
        android:layout_height="35sp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape"
        android:onClick="volver"
        android:text="@string/btn_volver_string"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_eliminar"
        app:layout_constraintTop_toBottomOf="@+id/scrollView"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_eliminar"
        android:layout_width="130sp"
        android:layout_height="35sp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape"
        android:onClick="baja"
        android:text="@string/btn_borrar_cuenta_string"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_regresar"
        app:layout_constraintStart_toEndOf="@+id/btn_modificar"
        app:layout_constraintTop_toBottomOf="@+id/scrollView"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>