<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoq"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/eti_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/merienda_one"
        android:text="@string/txt_login_string"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/editNumero"
        android:layout_width="270sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="Número"
        android:ems="10"
        android:fontFamily="@font/merienda_one"
        android:hint="@string/txt_numero_string"
        android:inputType="number"
        android:textColor="@android:color/background_light"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eti_Login" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="270sp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:autofillHints="Contraseña"
        android:ems="10"
        android:fontFamily="@font/merienda_one"
        android:hint="@string/txt_contraseña_string"
        android:inputType="textPassword"
        android:textColor="@android:color/background_light"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNumero" />

    <Button
        android:id="@+id/btn_entrar"
        android:layout_width="136dp"
        android:layout_height="68dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/shape"
        android:fontFamily="sans-serif"
        android:onClick="entrar"
        android:text="@string/btn_iniciar_sesion_string"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_registro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPassword" />

    <Button
        android:id="@+id/btn_registro"
        android:layout_width="150dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/shape"
        android:fontFamily="sans-serif"
        android:onClick="registro"
        android:text="@string/btn_registrate_string"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_entrar"
        app:layout_constraintTop_toBottomOf="@+id/editPassword" />

    <TextView
        android:id="@+id/eti_sin_cuenta"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="68dp"
        android:fontFamily="@font/piedra"
        android:text="@string/txt_sin_cuenta_string"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_registro"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>